changes in HomeViewC,LaunchCamera,CommunityVC,EarningVC,T&C Html

--- a/photoshare/photoshare/term.html
+++ b/photoshare/photoshare/term.html
@@ -22,7 +22,7 @@ article, aside, canvas, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section, summary,
 time, mark, audio, video {
    margin: 0;
-   padding: 0;
+   padding: 0 2px 0 0;
    border: 0;
    outline: 0;
    font-size: 100%;
@@ -65,7 +65,7 @@ p.lead {
      margin-left:31px;
     margin-top: -20px;
       text-align: justify;
-    word-break: break-all;
+    /*word-break: break-all;*/
 }
 .row {
    max-width: 1008px;
@@ -124,7 +124,7 @@ p.lead {
             .desc { font: 14px/24px opensans-regular, sans-serif; 
              padding-left: 28px;
              text-align: justify;
-    word-break: break-all;}
+    /*word-break: break-all;*/}
             .cc{
                 border: 2px solid brown;
                 border-radius: 10px;
@@ -327,7 +327,7 @@ span.bottom {
                     
                     <h2 id="7"><span>7.</span> <span class="bottom">INFORMATION ABOUT US AND HOW TO CONTACT US</span> </h2>
                     <div class="frist_div onl">7.1 <p class="desc" >We are a company registered in the Isle of Man. Our company registration number is 006583V and Our registered office is at 34 North Quay, Douglas, Isle of Man, IM1 4LB, British Isles.</p></div>
-                    <div class="frist_div">7.2 <p class="desc" > If you have any questions or if you have any complaints, please contact Us. You can contact Us by telephoning Our customer service team at 08451 650426 or by e-mailing Us at <b style="color: red;">admin@123Friday.com.</b></p></div> 
+                    <div class="frist_div">7.2 <p class="desc" > If you have any questions or if you have any complaints, please contact Us. You can contact Us by telephoning Our customer service team at 08451 650426 or by e-mailing Us at <b style="color: black;">admin@123Friday.com.</b></p></div> 
                      <div class="frist_div">7.3 <p class="desc" > If you wish to contact Us in writing, or if any clause in these Terms requires you to give Us notice in writing (for example, to cancel the contract), you can send this to Us by e-mail, to admin@123Friday.com. We will confirm receipt of this by email.</p></div>
                      
                      <h2 id="8"><span>8.</span><span class="bottom"> HOW WE MAY USE YOUR PERSONAL INFORMATION</span></h2>
